  duplicate lines and to not ignore every second automatic comment
  (Olivier Sannier)
- added ability to search comments (Olivier Sannier)
- poEdit now preserves obsolete translations (Olivier Sannier)
- added checking of input files' correctness
- fixed parsing of "\\n" substrings in catalog headers
- fixed compilation with wxWidgets >= 2.5.3
- added more translations:
     Korean (Hojin Choi)
     Hebrew (Nir Lavi)
     Kyrgyz (Ilyas Bakirov)


Version 1.3.1
-------------

- fixed assertion failure when viewing source files in the builtin viewer
- fixed wrong escaping of backslashes in X-Poedit-* headers
- fixed parsing of references to filenames containing spaces (Shane Harper)
- fixed crash with catalogs that have plural forms but no Plural-Forms header
- fixed parsing of the line following last msgstr[i] entry (bug #1025211)
- fixed controls layout when compiled against wxWidgets 2.4
 

Version 1.3.0
-------------

- plural forms support (based on patch by Christophe Hermier and Guido Flohr)
- fixed catalog I/O to correctly handle automatic comments (Tim Dijkstra)
- [Win32] visual improvements to main window (Tim Kosse)
- usability improvements
- fixed storing of non-ASCII catalog headers
- poEdit now preserves non-standard entries in PO file header
- poEdit now respects c-format and no-c-format when checking tokens correctness
- position in translations list is no longer lost when saving the file
- configure now correctly detects libdb4 with versioned symbols
- "Find" tool now selects matches in text controls (Sergio Talens-Oliag)
- use msgfmt for tokens validation
- double-clicking on invalid entry now pops up error description
- [Unix] use GNOME theme icons if they are installed on the system
- [Unix] use GtkSpell for spell checking (GTK+ 2 only)
- poEdit no longer saves .po.poedit file, the headers were moved into
  custom X-Poedit-* fields in .po file header
- added more translations:
     Punjabi (Amanpreet Singh Alam)
     Albanian (Besnik Bleta)