@@ -17,6 +17,7 @@ Version 1.3.2
 - added checking of input files' correctness
 - fixed parsing of "\\n" substrings in catalog headers
 - fixed compilation with wxWidgets >= 2.5.3
+- fixed Find to search in all plural forms instead of only the first one
 - added more translations:
      Korean (Hojin Choi)
      Hebrew (Nir Lavi)
